trunk/Archive2/59/4c2c5ffdba13a2/output
main.cpp: In instantiation of 'void f(AnArray&) [with AnArray = int [5]]':
main.cpp:16:8:   required from here
main.cpp:6:5: error: request for member 'hiThere' in 'array', which is of non-class type 'int [5]'
     array.hiThere();
     ^
